# materials_apps

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  payments_fixture.json  pyproject.toml  requirements.txt  users_fixture.json
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
course/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0002_initial.py
lesson/: models.py  serializers.py  urls.py  views.py
redis/: dump.rdb
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_payments_status.py  0002_subscription.py  0003_alter_payments_date_of_payment.py  0003_payments_payment_url_payments_stripe_price_id_and_more.py  0003_subscription_is_active.py  0004_alter_payments_payment_url.py  0004_alter_subscription_course_alter_subscription_user.py
